--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,9 +1,10 @@
-name: Continuous Integration
+name: Check code quality
 
 on:
+  workflow_call: ~
   pull_request: ~
   push:
-    branches: ['master']
+    branches: ['master', 'release']
 
 permissions:
   contents: read
